--- a/src/components/BlankApp/Form/Form.scss
+++ b/src/components/BlankApp/Form/Form.scss
@@ -24,8 +24,8 @@
 }
 
 .form-flex__description {
-  font-size: 10px;
-  padding-left: 170px;
+  font-size: 12px;
+  padding-left: 160px;
   padding-bottom: 10px;
 }
 
@@ -67,10 +67,22 @@
   color: rgba(10, 30, 50, 0.9);
 }
 
+.input {
+  border-color: black;
+
+  &.hasError {
+    border-color: red;
+  }
+
+  &.noError {
+    border-color: green;
+  }
+}
+
 .form-flex__item input {
   display: inline-block;
   width: 290px;
-  padding-bottom: 10px;
+  padding-bottom: 2px;
   border: none;
   border-bottom: 1px solid rgba(10, 30, 50, 0.9);
   font-size: 17px;
@@ -93,9 +105,24 @@
   margin-left: 190px;
   width: 200px;
   padding-bottom: 2px;
-  border: none;
-  border-bottom: 1px solid rgba(10, 30, 50, 0.9);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   font-size: 17px;
   line-height: 27px;
   text-align: center;
+  color: rgba(10, 30, 50, 0.9);
 }
+
+.main-form-item button:hover {
+  border: 1px solid rgb(198, 198, 198);
+  color: rgb(24, 24, 24);
+  background: #f7f7f7 linear-gradient(#f7f7f7, #f1f1f1);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.main-form-item button:active {
+  color: rgb(51, 51, 51);
+  border: 1px solid rgb(204, 204, 204);
+  background: rgb(238, 238, 238) linear-gradient(rgb(238, 238, 238), rgb(224, 224, 224));
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1) inset;
+}
+
