--- a/src/components/BlankApp/Form/Form.scss
+++ b/src/components/BlankApp/Form/Form.scss
@@ -21,6 +21,7 @@
 .form-flex {
   display: flex;
   flex-wrap: wrap;
+  width: 100%;
 }
 
 .form-flex__description {
@@ -29,31 +30,10 @@
   padding-bottom: 10px;
 }
 
-.main-form-item__validation {
-  display: inline-block;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  margin-left: 80px;
-  width: 450px;
-  font-size: 15px;
-  line-height: 25px;
-  color: #f54040;
-}
-
-.form-flex__item,
-.main-form-item {
+.main-form-item,
+.form-flex__item {
   width: 100%;
   margin: 0% 1%;
-}
-
-.form-flex__item label {
-  display: inline-block;
-  position: relative;
-  width: 200px;
-  text-align: center;
-  font-size: 17px;
-  line-height: 20px;
-  margin-right: 20px;
 }
 
 .main-form-item label {
@@ -65,29 +45,6 @@
   line-height: 20px;
   margin-right: 20px;
   color: rgba(10, 30, 50, 0.9);
-}
-
-.input {
-  border-color: black;
-
-  &.hasError {
-    border-color: red;
-  }
-
-  &.noError {
-    border-color: green;
-  }
-}
-
-.form-flex__item input {
-  display: inline-block;
-  width: 290px;
-  padding-bottom: 2px;
-  border: none;
-  border-bottom: 1px solid rgba(10, 30, 50, 0.9);
-  font-size: 17px;
-  line-height: 20px;
-  text-align: center;
 }
 
 .main-form-item textarea {
@@ -125,4 +82,3 @@
   background: rgb(238, 238, 238) linear-gradient(rgb(238, 238, 238), rgb(224, 224, 224));
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1) inset;
 }
-
