--- a/src/components/BlankApp/BlankApp.scss
+++ b/src/components/BlankApp/BlankApp.scss
@@ -13,7 +13,7 @@
   font-size: 35px;
   text-align: center;
   margin-bottom: 30px;
-  color: rgba(240, 240, 240, 0.7);
+  color: #fff;
 }
 
 .site-right {
@@ -24,7 +24,7 @@
 
 .main-blank {
   padding: 15px;
-  background-color: rgba(10, 20, 100, 0.9);
+  background-color: rgba(10, 80, 100, 0.9);
   color: #fff;
 }
 
