--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -7,6 +7,8 @@ body {
 
 .App {
   color: $color-white;
+  background-image: url('_images/background.jpg');
+  background-repeat: round;
 
   .header {
     overflow: auto;
