corrected code css

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -9,6 +9,7 @@ body {
   color: $color-white;
   background-image: url('_images/background.jpg');
   background-repeat: round;
+  background-size: 100%;
 
   .header {
     overflow: auto;
