--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,5 @@
 $color-black: #000;
 $color-dark-gray: #333;
-$color-white: #eee;
+$color-white: #fff;
+$color-sapphire: #0b295b;
+$color-red: #f00;
