--- a/src/components/BlankApp/BlankApp.scss
+++ b/src/components/BlankApp/BlankApp.scss
@@ -1,40 +1,23 @@
-.container {
-  margin: 15px auto;
+@import '~styles/variables';
+
+.root {
   padding: 0 15px;
-  height: 125vh;
 }
 
-.site-flex {
+.site {
   display: flex;
 }
 
-.site-title {
+.title {
   font-weight: 300;
   font-size: 35px;
   text-align: center;
   margin-bottom: 30px;
-  color: #fff;
+  color: $color-white;
 }
 
-.site-right {
+.right {
   width: 47.5%;
   height: 100%;
-  background-color: #fff;
+  background-color: $color-white;
 }
-
-.main-blank {
-  padding: 15px;
-  background-color: rgba(10, 80, 100, 0.9);
-  color: #fff;
-}
-
-.main-blank__title {
-  font-size: 23px;
-  margin-bottom: 30px;
-}
-
-.blank-flex {
-  display: flex;
-  flex-wrap: wrap;
-}
-
