--- a/src/components/BlankApp/Form/FieldForm/FieldForm.scss
+++ b/src/components/BlankApp/Form/FieldForm/FieldForm.scss
@@ -1,25 +1,18 @@
-.main-form-item__validation {
-  display: inline-block;
-  margin: 5px 35px;
-  width: 450px;
-  font-size: 15px;
-  line-height: 25px;
-  color: #f54040;
-}
+@import '~styles/variables';
 
-.form-flex__item {
+.root {
   width: 100%;
   height: 100px;
-}
 
-.form-flex__item label {
-  display: inline-block;
-  position: relative;
-  width: 100%;
-  text-align: center;
-  font-size: 17px;
-  line-height: 30px;
-  margin-right: 20px;
+  label {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    text-align: center;
+    font-size: 17px;
+    line-height: 30px;
+    margin-right: 20px;
+  }
 }
 
 .input {
@@ -31,9 +24,9 @@
   font-size: 17px;
   line-height: 20px;
   text-align: center;
-  border-color: black;
+  border-color: $color-black;
 
   &.hasError {
-    border-color: red;
+    border-color: $color-red;
   }
 }
