--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -18,7 +18,7 @@ html {
   background-color: #fff;
 }
 
-.main-body {
+.body {
   font-weight: 400;
   width: 100%;
   overflow-x: hidden;
@@ -30,3 +30,7 @@ html {
   background-size: cover;
 }
 
+.container {
+  margin: 15px auto;
+  height: 125vh;
+}
