--- a/src/components/BlankApp/Document/Document.scss
+++ b/src/components/BlankApp/Document/Document.scss
@@ -2,7 +2,7 @@
 
 .root {
   padding: 15px;
-  background-color: rgba(10, 80, 100, 0.9);
+  background-color: $color-dark-cyan;
   color: $color-white;
 }
 
