--- a/src/components/BlankApp/Form/FieldForm/FieldForm.scss
+++ b/src/components/BlankApp/Form/FieldForm/FieldForm.scss
@@ -3,16 +3,16 @@
 .root {
   width: 100%;
   height: 100px;
+}
 
-  label {
-    display: inline-block;
-    position: relative;
-    width: 100%;
-    text-align: center;
-    font-size: 17px;
-    line-height: 30px;
-    margin-right: 20px;
-  }
+.description {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  margin-right: 20px;
+  text-align: center;
+  font-size: 17px;
+  line-height: 30px;
 }
 
 .input {
